task-17-hostpath-exception-by-label/blocked-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blocked-pod-etc-access
spec:
  containers:
    - name: regular-app
      image: nginx:1.25
      volumeMounts:
        - name: etc-vol
          mountPath: /host-etc
          readOnly: true
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 200m
          memory: 256Mi
  volumes:
    - name: etc-vol
      hostPath:
        path: /etc
        type: Directory
